 Bug 473570 -  Restrict font-weight text attribute to allowed values, r=marcoz, davidb, mozbugz, sr=roc